# windows-named-pipe-server-ipc

./: .gitignore  CMakeLists.txt  client-grpc.js  client-new.ts  client.js  package.json  vcpkg.json
src/async/: Buffer.h  NamedPipeHelpers.cpp  NamedPipeHelpers.h  NamedPipeServer.cpp  NamedPipeServer.h  ObjectPool.h  Traits.h  Win32Helpers.cpp  Win32Helpers.h  main_async.cpp
src/basic/: main.cpp  main.h
src/grpc/: grpc_client.cpp  grpc_server.cpp
src/grpc/named_pipe_transport/: credentials.hpp  endpoint.hpp  listener.hpp
src/grpc/proto/: service.proto
src/multithread/: multithreaded-pipe-server.cpp
